Fix bad wrapping of skills in about page

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,8 +6,9 @@
     --text-subtle-color: #4a4a4a;
     --background-subtle-color: #dadada;
 
-    --font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-        "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+    --font-family:
+        ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
         "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
         "Noto Color Emoji";
 
@@ -113,7 +114,7 @@ header > a {
 
 #back-arrow:hover > svg {
     transition: stroke ease 250ms;
-    stroke: var(--text-accent-color) ;
+    stroke: var(--text-accent-color);
 }
 
 footer {
@@ -157,6 +158,7 @@ code {
     border-radius: 0.2rem;
 
     font-weight: 200;
+    line-height: 1em;
 }
 
 /* Anchor link styles for headings */
@@ -175,7 +177,7 @@ h3:has(> a[href^="#"])::after {
     transition: opacity 300ms ease;
     position: absolute;
     bottom: 0;
-    left: -.75em;
+    left: -0.75em;
 }
 
 h1:hover:has(> a[href^="#"])::after,
@@ -232,7 +234,6 @@ h3:hover:has(> a[href^="#"])::after {
         font-style: italic;
         font-weight: 200;
         font-size: 0.5em;
-        line-height: 0.5em;
         padding: 0;
         border: none;
     }
@@ -326,8 +327,10 @@ main > :nth-child(n + 10) {
     justify-content: space-between;
 }
 
-.items > *:not(:last-child) {
-    margin-right: 0.2rem;
+.items {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.2rem;
 }
 
 .group-underline {
